overflow fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,10 @@ body {
     overflow-x: hidden;
 }
 
+section {
+    overflow: hidden;
+}
+
 a {
     color: inherit;
     text-decoration: none;
